src/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> re
Rule 1     re -> alternation
Rule 2     re -> simple
Rule 3     alternation -> re | simple
Rule 4     simple -> concatenation
Rule 5     simple -> basic
Rule 6     concatenation -> simple basic
Rule 7     basic -> elementary
Rule 8     basic -> quantifier
Rule 9     quantifier -> basequantifier
Rule 10    quantifier -> basequantifier ?
Rule 11    basequantifier -> asterisk
Rule 12    basequantifier -> plus
Rule 13    basequantifier -> optional
Rule 14    basequantifier -> nrepeat
Rule 15    elementary -> group
Rule 16    elementary -> directional
Rule 17    elementary -> command
Rule 18    elementary -> literal
Rule 19    elementary -> charclass
Rule 20    elementary -> anychar
Rule 21    elementary -> nodisplay
Rule 22    elementary -> anchor
Rule 23    elementary -> predefined
Rule 24    asterisk -> elementary *
Rule 25    plus -> elementary +
Rule 26    optional -> elementary ?
Rule 27    nrepeat -> elementary { number }
Rule 28    nrepeat -> elementary { , number }
Rule 29    nrepeat -> elementary { number , }
Rule 30    nrepeat -> elementary { number , number }
Rule 31    anychar -> .
Rule 32    nodisplay -> !
Rule 33    number -> DIGIT
Rule 34    number -> DIGIT number
Rule 35    group -> ( groupbody )
Rule 36    groupbody -> ? specialgroup
Rule 37    groupbody -> basicgroup
Rule 38    specialgroup -> _ lengthcheck
Rule 39    specialgroup -> | stationarygroup
Rule 40    specialgroup -> : nocapture
Rule 41    lengthcheck -> ( number ) re
Rule 42    stationarygroup -> re
Rule 43    nocapture -> re
Rule 44    basicgroup -> re
Rule 45    charclass -> [ classitems ]
Rule 46    classitems -> ^ baseitems
Rule 47    classitems -> classitems2
Rule 48    classitems2 -> baseitems
Rule 49    classitems2 -> baseitems | baseitems
Rule 50    baseitems -> classatom
Rule 51    baseitems -> classatom baseitems
Rule 52    classatom -> classliteral
Rule 53    classatom -> classrange
Rule 54    classliteral -> !
Rule 55    classliteral -> "
Rule 56    classliteral -> #
Rule 57    classliteral -> $
Rule 58    classliteral -> %
Rule 59    classliteral -> &
Rule 60    classliteral -> '
Rule 61    classliteral -> (
Rule 62    classliteral -> )
Rule 63    classliteral -> *
Rule 64    classliteral -> +
Rule 65    classliteral -> ,
Rule 66    classliteral -> .
Rule 67    classliteral -> /
Rule 68    classliteral -> :
Rule 69    classliteral -> ;
Rule 70    classliteral -> <
Rule 71    classliteral -> =
Rule 72    classliteral -> >
Rule 73    classliteral -> ?
Rule 74    classliteral -> @
Rule 75    classliteral -> [
Rule 76    classliteral -> \
Rule 77    classliteral -> _
Rule 78    classliteral -> `
Rule 79    classliteral -> {
Rule 80    classliteral -> }
Rule 81    classliteral -> ~
Rule 82    classliteral -> literal
Rule 83    classrange -> classliteral - classliteral
Rule 84    predefined -> ` ALPHA
Rule 85    directional -> ^ DIGIT
Rule 86    directional -> ^ ALPHA
Rule 87    anchor -> $ DIGIT
Rule 88    anchor -> $ ALPHA
Rule 89    command -> >
Rule 90    command -> <
Rule 91    command -> /
Rule 92    command -> \
Rule 93    command -> #
Rule 94    command -> %
Rule 95    literal -> ESCAPED
Rule 96    literal -> ALPHA
Rule 97    literal -> DIGIT
Rule 98    literal -> OTHER

Terminals, with rules where they appear

!                    : 32 54
"                    : 55
#                    : 56 93
$                    : 57 87 88
%                    : 58 94
&                    : 59
'                    : 60
(                    : 35 41 61
)                    : 35 41 62
*                    : 24 63
+                    : 25 64
,                    : 28 29 30 65
-                    : 83
.                    : 31 66
/                    : 67 91
:                    : 40 68
;                    : 69
<                    : 70 90
=                    : 71
>                    : 72 89
?                    : 10 26 36 73
@                    : 74
ALPHA                : 84 86 88 96
DIGIT                : 33 34 85 87 97
ESCAPED              : 95
OTHER                : 98
[                    : 45 75
\                    : 76 92
]                    : 45
^                    : 46 85 86
_                    : 38 77
`                    : 78 84
error                : 
{                    : 27 28 29 30 79
|                    : 3 39 49
}                    : 27 28 29 30 80
~                    : 81

Nonterminals, with rules where they appear

alternation          : 1
anchor               : 22
anychar              : 20
asterisk             : 11
baseitems            : 46 48 49 49 51
basequantifier       : 9 10
basic                : 5 6
basicgroup           : 37
charclass            : 19
classatom            : 50 51
classitems           : 45
classitems2          : 47
classliteral         : 52 83 83
classrange           : 53
command              : 17
concatenation        : 4
directional          : 16
elementary           : 7 24 25 26 27 28 29 30
group                : 15
groupbody            : 35
lengthcheck          : 38
literal              : 18 82
nocapture            : 40
nodisplay            : 21
nrepeat              : 14
number               : 27 28 29 30 30 34 41
optional             : 13
plus                 : 12
predefined           : 23
quantifier           : 8
re                   : 3 41 42 43 44 0
simple               : 2 3 6
specialgroup         : 36
stationarygroup      : 39

Parsing method: LALR

state 0

    (0) S' -> . re
    (1) re -> . alternation
    (2) re -> . simple
    (3) alternation -> . re | simple
    (4) simple -> . concatenation
    (5) simple -> . basic
    (6) concatenation -> . simple basic
    (7) basic -> . elementary
    (8) basic -> . quantifier
    (15) elementary -> . group
    (16) elementary -> . directional
    (17) elementary -> . command
    (18) elementary -> . literal
    (19) elementary -> . charclass
    (20) elementary -> . anychar
    (21) elementary -> . nodisplay
    (22) elementary -> . anchor
    (23) elementary -> . predefined
    (9) quantifier -> . basequantifier
    (10) quantifier -> . basequantifier ?
    (35) group -> . ( groupbody )
    (85) directional -> . ^ DIGIT
    (86) directional -> . ^ ALPHA
    (89) command -> . >
    (90) command -> . <
    (91) command -> . /
    (92) command -> . \
    (93) command -> . #
    (94) command -> . %
    (95) literal -> . ESCAPED
    (96) literal -> . ALPHA
    (97) literal -> . DIGIT
    (98) literal -> . OTHER
    (45) charclass -> . [ classitems ]
    (31) anychar -> . .
    (32) nodisplay -> . !
    (87) anchor -> . $ DIGIT
    (88) anchor -> . $ ALPHA
    (84) predefined -> . ` ALPHA
    (11) basequantifier -> . asterisk
    (12) basequantifier -> . plus
    (13) basequantifier -> . optional
    (14) basequantifier -> . nrepeat
    (24) asterisk -> . elementary *
    (25) plus -> . elementary +
    (26) optional -> . elementary ?
    (27) nrepeat -> . elementary { number }
    (28) nrepeat -> . elementary { , number }
    (29) nrepeat -> . elementary { number , }
    (30) nrepeat -> . elementary { number , number }

    (               shift and go to state 8
    ^               shift and go to state 29
    >               shift and go to state 9
    <               shift and go to state 36
    /               shift and go to state 26
    \               shift and go to state 18
    #               shift and go to state 1
    %               shift and go to state 20
    ESCAPED         shift and go to state 23
    ALPHA           shift and go to state 15
    DIGIT           shift and go to state 34
    OTHER           shift and go to state 14
    [               shift and go to state 35
    .               shift and go to state 6
    !               shift and go to state 17
    $               shift and go to state 22
    `               shift and go to state 27

    alternation                    shift and go to state 2
    concatenation                  shift and go to state 7
    command                        shift and go to state 3
    simple                         shift and go to state 4
    anchor                         shift and go to state 21
    nodisplay                      shift and go to state 24
    basequantifier                 shift and go to state 25
    anychar                        shift and go to state 28
    quantifier                     shift and go to state 19
    group                          shift and go to state 30
    elementary                     shift and go to state 10
    basic                          shift and go to state 11
    literal                        shift and go to state 12
    directional                    shift and go to state 31
    plus                           shift and go to state 5
    predefined                     shift and go to state 33
    re                             shift and go to state 32
    asterisk                       shift and go to state 16
    charclass                      shift and go to state 37
    nrepeat                        shift and go to state 13
    optional                       shift and go to state 38

state 1

    (93) command -> # .

    *               reduce using rule 93 (command -> # .)
    +               reduce using rule 93 (command -> # .)
    ?               reduce using rule 93 (command -> # .)
    {               reduce using rule 93 (command -> # .)
    (               reduce using rule 93 (command -> # .)
    ^               reduce using rule 93 (command -> # .)
    >               reduce using rule 93 (command -> # .)
    <               reduce using rule 93 (command -> # .)
    /               reduce using rule 93 (command -> # .)
    \               reduce using rule 93 (command -> # .)
    #               reduce using rule 93 (command -> # .)
    %               reduce using rule 93 (command -> # .)
    ESCAPED         reduce using rule 93 (command -> # .)
    ALPHA           reduce using rule 93 (command -> # .)
    DIGIT           reduce using rule 93 (command -> # .)
    OTHER           reduce using rule 93 (command -> # .)
    [               reduce using rule 93 (command -> # .)
    .               reduce using rule 93 (command -> # .)
    !               reduce using rule 93 (command -> # .)
    $               reduce using rule 93 (command -> # .)
    `               reduce using rule 93 (command -> # .)
    |               reduce using rule 93 (command -> # .)
    )               reduce using rule 93 (command -> # .)
    $end            reduce using rule 93 (command -> # .)


state 2

    (1) re -> alternation .

    |               reduce using rule 1 (re -> alternation .)
    )               reduce using rule 1 (re -> alternation .)
    $end            reduce using rule 1 (re -> alternation .)


state 3

    (17) elementary -> command .

    *               reduce using rule 17 (elementary -> command .)
    +               reduce using rule 17 (elementary -> command .)
    ?               reduce using rule 17 (elementary -> command .)
    {               reduce using rule 17 (elementary -> command .)
    (               reduce using rule 17 (elementary -> command .)
    ^               reduce using rule 17 (elementary -> command .)
    >               reduce using rule 17 (elementary -> command .)
    <               reduce using rule 17 (elementary -> command .)
    /               reduce using rule 17 (elementary -> command .)
    \               reduce using rule 17 (elementary -> command .)
    #               reduce using rule 17 (elementary -> command .)
    %               reduce using rule 17 (elementary -> command .)
    ESCAPED         reduce using rule 17 (elementary -> command .)
    ALPHA           reduce using rule 17 (elementary -> command .)
    DIGIT           reduce using rule 17 (elementary -> command .)
    OTHER           reduce using rule 17 (elementary -> command .)
    [               reduce using rule 17 (elementary -> command .)
    .               reduce using rule 17 (elementary -> command .)
    !               reduce using rule 17 (elementary -> command .)
    $               reduce using rule 17 (elementary -> command .)
    `               reduce using rule 17 (elementary -> command .)
    |               reduce using rule 17 (elementary -> command .)
    $end            reduce using rule 17 (elementary -> command .)
    )               reduce using rule 17 (elementary -> command .)


state 4

    (2) re -> simple .
    (6) concatenation -> simple . basic
    (7) basic -> . elementary
    (8) basic -> . quantifier
    (15) elementary -> . group
    (16) elementary -> . directional
    (17) elementary -> . command
    (18) elementary -> . literal
    (19) elementary -> . charclass
    (20) elementary -> . anychar
    (21) elementary -> . nodisplay
    (22) elementary -> . anchor
    (23) elementary -> . predefined
    (9) quantifier -> . basequantifier
    (10) quantifier -> . basequantifier ?
    (35) group -> . ( groupbody )
    (85) directional -> . ^ DIGIT
    (86) directional -> . ^ ALPHA
    (89) command -> . >
    (90) command -> . <
    (91) command -> . /
    (92) command -> . \
    (93) command -> . #
    (94) command -> . %
    (95) literal -> . ESCAPED
    (96) literal -> . ALPHA
    (97) literal -> . DIGIT
    (98) literal -> . OTHER
    (45) charclass -> . [ classitems ]
    (31) anychar -> . .
    (32) nodisplay -> . !
    (87) anchor -> . $ DIGIT
    (88) anchor -> . $ ALPHA
    (84) predefined -> . ` ALPHA
    (11) basequantifier -> . asterisk
    (12) basequantifier -> . plus
    (13) basequantifier -> . optional
    (14) basequantifier -> . nrepeat
    (24) asterisk -> . elementary *
    (25) plus -> . elementary +
    (26) optional -> . elementary ?
    (27) nrepeat -> . elementary { number }
    (28) nrepeat -> . elementary { , number }
    (29) nrepeat -> . elementary { number , }
    (30) nrepeat -> . elementary { number , number }

    |               reduce using rule 2 (re -> simple .)
    )               reduce using rule 2 (re -> simple .)
    $end            reduce using rule 2 (re -> simple .)
    (               shift and go to state 8
    ^               shift and go to state 29
    >               shift and go to state 9
    <               shift and go to state 36
    /               shift and go to state 26
    \               shift and go to state 18
    #               shift and go to state 1
    %               shift and go to state 20
    ESCAPED         shift and go to state 23
    ALPHA           shift and go to state 15
    DIGIT           shift and go to state 34
    OTHER           shift and go to state 14
    [               shift and go to state 35
    .               shift and go to state 6
    !               shift and go to state 17
    $               shift and go to state 22
    `               shift and go to state 27

    quantifier                     shift and go to state 19
    optional                       shift and go to state 38
    group                          shift and go to state 30
    elementary                     shift and go to state 10
    basic                          shift and go to state 39
    literal                        shift and go to state 12
    directional                    shift and go to state 31
    plus                           shift and go to state 5
    command                        shift and go to state 3
    anchor                         shift and go to state 21
    predefined                     shift and go to state 33
    nodisplay                      shift and go to state 24
    asterisk                       shift and go to state 16
    basequantifier                 shift and go to state 25
    charclass                      shift and go to state 37
    nrepeat                        shift and go to state 13
    anychar                        shift and go to state 28

state 5

    (12) basequantifier -> plus .

    ?               reduce using rule 12 (basequantifier -> plus .)
    (               reduce using rule 12 (basequantifier -> plus .)
    ^               reduce using rule 12 (basequantifier -> plus .)
    >               reduce using rule 12 (basequantifier -> plus .)
    <               reduce using rule 12 (basequantifier -> plus .)
    /               reduce using rule 12 (basequantifier -> plus .)
    \               reduce using rule 12 (basequantifier -> plus .)
    #               reduce using rule 12 (basequantifier -> plus .)
    %               reduce using rule 12 (basequantifier -> plus .)
    ESCAPED         reduce using rule 12 (basequantifier -> plus .)
    ALPHA           reduce using rule 12 (basequantifier -> plus .)
    DIGIT           reduce using rule 12 (basequantifier -> plus .)
    OTHER           reduce using rule 12 (basequantifier -> plus .)
    [               reduce using rule 12 (basequantifier -> plus .)
    .               reduce using rule 12 (basequantifier -> plus .)
    !               reduce using rule 12 (basequantifier -> plus .)
    $               reduce using rule 12 (basequantifier -> plus .)
    `               reduce using rule 12 (basequantifier -> plus .)
    |               reduce using rule 12 (basequantifier -> plus .)
    $end            reduce using rule 12 (basequantifier -> plus .)
    )               reduce using rule 12 (basequantifier -> plus .)


state 6

    (31) anychar -> . .

    *               reduce using rule 31 (anychar -> . .)
    +               reduce using rule 31 (anychar -> . .)
    ?               reduce using rule 31 (anychar -> . .)
    {               reduce using rule 31 (anychar -> . .)
    (               reduce using rule 31 (anychar -> . .)
    ^               reduce using rule 31 (anychar -> . .)
    >               reduce using rule 31 (anychar -> . .)
    <               reduce using rule 31 (anychar -> . .)
    /               reduce using rule 31 (anychar -> . .)
    \               reduce using rule 31 (anychar -> . .)
    #               reduce using rule 31 (anychar -> . .)
    %               reduce using rule 31 (anychar -> . .)
    ESCAPED         reduce using rule 31 (anychar -> . .)
    ALPHA           reduce using rule 31 (anychar -> . .)
    DIGIT           reduce using rule 31 (anychar -> . .)
    OTHER           reduce using rule 31 (anychar -> . .)
    [               reduce using rule 31 (anychar -> . .)
    .               reduce using rule 31 (anychar -> . .)
    !               reduce using rule 31 (anychar -> . .)
    $               reduce using rule 31 (anychar -> . .)
    `               reduce using rule 31 (anychar -> . .)
    |               reduce using rule 31 (anychar -> . .)
    )               reduce using rule 31 (anychar -> . .)
    $end            reduce using rule 31 (anychar -> . .)


state 7

    (4) simple -> concatenation .

    (               reduce using rule 4 (simple -> concatenation .)
    ^               reduce using rule 4 (simple -> concatenation .)
    >               reduce using rule 4 (simple -> concatenation .)
    <               reduce using rule 4 (simple -> concatenation .)
    /               reduce using rule 4 (simple -> concatenation .)
    \               reduce using rule 4 (simple -> concatenation .)
    #               reduce using rule 4 (simple -> concatenation .)
    %               reduce using rule 4 (simple -> concatenation .)
    ESCAPED         reduce using rule 4 (simple -> concatenation .)
    ALPHA           reduce using rule 4 (simple -> concatenation .)
    DIGIT           reduce using rule 4 (simple -> concatenation .)
    OTHER           reduce using rule 4 (simple -> concatenation .)
    [               reduce using rule 4 (simple -> concatenation .)
    .               reduce using rule 4 (simple -> concatenation .)
    !               reduce using rule 4 (simple -> concatenation .)
    $               reduce using rule 4 (simple -> concatenation .)
    `               reduce using rule 4 (simple -> concatenation .)
    |               reduce using rule 4 (simple -> concatenation .)
    $end            reduce using rule 4 (simple -> concatenation .)
    )               reduce using rule 4 (simple -> concatenation .)


state 8

    (35) group -> ( . groupbody )
    (36) groupbody -> . ? specialgroup
    (37) groupbody -> . basicgroup
    (44) basicgroup -> . re
    (1) re -> . alternation
    (2) re -> . simple
    (3) alternation -> . re | simple
    (4) simple -> . concatenation
    (5) simple -> . basic
    (6) concatenation -> . simple basic
    (7) basic -> . elementary
    (8) basic -> . quantifier
    (15) elementary -> . group
    (16) elementary -> . directional
    (17) elementary -> . command
    (18) elementary -> . literal
    (19) elementary -> . charclass
    (20) elementary -> . anychar
    (21) elementary -> . nodisplay
    (22) elementary -> . anchor
    (23) elementary -> . predefined
    (9) quantifier -> . basequantifier
    (10) quantifier -> . basequantifier ?
    (35) group -> . ( groupbody )
    (85) directional -> . ^ DIGIT
    (86) directional -> . ^ ALPHA
    (89) command -> . >
    (90) command -> . <
    (91) command -> . /
    (92) command -> . \
    (93) command -> . #
    (94) command -> . %
    (95) literal -> . ESCAPED
    (96) literal -> . ALPHA
    (97) literal -> . DIGIT
    (98) literal -> . OTHER
    (45) charclass -> . [ classitems ]
    (31) anychar -> . .
    (32) nodisplay -> . !
    (87) anchor -> . $ DIGIT
    (88) anchor -> . $ ALPHA
    (84) predefined -> . ` ALPHA
    (11) basequantifier -> . asterisk
    (12) basequantifier -> . plus
    (13) basequantifier -> . optional
    (14) basequantifier -> . nrepeat
    (24) asterisk -> . elementary *
    (25) plus -> . elementary +
    (26) optional -> . elementary ?
    (27) nrepeat -> . elementary { number }
    (28) nrepeat -> . elementary { , number }
    (29) nrepeat -> . elementary { number , }
    (30) nrepeat -> . elementary { number , number }

    ?               shift and go to state 40
    (               shift and go to state 8
    ^               shift and go to state 29
    >               shift and go to state 9
    <               shift and go to state 36
    /               shift and go to state 26
    \               shift and go to state 18
    #               shift and go to state 1
    %               shift and go to state 20
    ESCAPED         shift and go to state 23
    ALPHA           shift and go to state 15
    DIGIT           shift and go to state 34
    OTHER           shift and go to state 14
    [               shift and go to state 35
    .               shift and go to state 6
    !               shift and go to state 17
    $               shift and go to state 22
    `               shift and go to state 27

    alternation                    shift and go to state 2
    concatenation                  shift and go to state 7
    plus                           shift and go to state 5
    command                        shift and go to state 3
    simple                         shift and go to state 4
    anchor                         shift and go to state 21
    nodisplay                      shift and go to state 24
    basequantifier                 shift and go to state 25
    anychar                        shift and go to state 28
    directional                    shift and go to state 31
    quantifier                     shift and go to state 19
    group                          shift and go to state 30
    elementary                     shift and go to state 10
    basic                          shift and go to state 11
    literal                        shift and go to state 12
    basicgroup                     shift and go to state 42
    re                             shift and go to state 41
    predefined                     shift and go to state 33
    groupbody                      shift and go to state 43
    asterisk                       shift and go to state 16
    charclass                      shift and go to state 37
    nrepeat                        shift and go to state 13
    optional                       shift and go to state 38

state 9

    (89) command -> > .

    *               reduce using rule 89 (command -> > .)
    +               reduce using rule 89 (command -> > .)
    ?               reduce using rule 89 (command -> > .)
    {               reduce using rule 89 (command -> > .)
    (               reduce using rule 89 (command -> > .)
    ^               reduce using rule 89 (command -> > .)
    >               reduce using rule 89 (command -> > .)
    <               reduce using rule 89 (command -> > .)
    /               reduce using rule 89 (command -> > .)
    \               reduce using rule 89 (command -> > .)
    #               reduce using rule 89 (command -> > .)
    %               reduce using rule 89 (command -> > .)
    ESCAPED         reduce using rule 89 (command -> > .)
    ALPHA           reduce using rule 89 (command -> > .)
    DIGIT           reduce using rule 89 (command -> > .)
    OTHER           reduce using rule 89 (command -> > .)
    [               reduce using rule 89 (command -> > .)
    .               reduce using rule 89 (command -> > .)
    !               reduce using rule 89 (command -> > .)
    $               reduce using rule 89 (command -> > .)
    `               reduce using rule 89 (command -> > .)
    |               reduce using rule 89 (command -> > .)
    )               reduce using rule 89 (command -> > .)
    $end            reduce using rule 89 (command -> > .)


state 10

    (7) basic -> elementary .
    (24) asterisk -> elementary . *
    (25) plus -> elementary . +
    (26) optional -> elementary . ?
    (27) nrepeat -> elementary . { number }
    (28) nrepeat -> elementary . { , number }
    (29) nrepeat -> elementary . { number , }
    (30) nrepeat -> elementary . { number , number }

    (               reduce using rule 7 (basic -> elementary .)
    ^               reduce using rule 7 (basic -> elementary .)
    >               reduce using rule 7 (basic -> elementary .)
    <               reduce using rule 7 (basic -> elementary .)
    /               reduce using rule 7 (basic -> elementary .)
    \               reduce using rule 7 (basic -> elementary .)
    #               reduce using rule 7 (basic -> elementary .)
    %               reduce using rule 7 (basic -> elementary .)
    ESCAPED         reduce using rule 7 (basic -> elementary .)
    ALPHA           reduce using rule 7 (basic -> elementary .)
    DIGIT           reduce using rule 7 (basic -> elementary .)
    OTHER           reduce using rule 7 (basic -> elementary .)
    [               reduce using rule 7 (basic -> elementary .)
    .               reduce using rule 7 (basic -> elementary .)
    !               reduce using rule 7 (basic -> elementary .)
    $               reduce using rule 7 (basic -> elementary .)
    `               reduce using rule 7 (basic -> elementary .)
    |               reduce using rule 7 (basic -> elementary .)
    )               reduce using rule 7 (basic -> elementary .)
    $end            reduce using rule 7 (basic -> elementary .)
    *               shift and go to state 45
    +               shift and go to state 47
    ?               shift and go to state 46
    {               shift and go to state 44


state 11

    (5) simple -> basic .

    (               reduce using rule 5 (simple -> basic .)
    ^               reduce using rule 5 (simple -> basic .)
    >               reduce using rule 5 (simple -> basic .)
    <               reduce using rule 5 (simple -> basic .)
    /               reduce using rule 5 (simple -> basic .)
    \               reduce using rule 5 (simple -> basic .)
    #               reduce using rule 5 (simple -> basic .)
    %               reduce using rule 5 (simple -> basic .)
    ESCAPED         reduce using rule 5 (simple -> basic .)
    ALPHA           reduce using rule 5 (simple -> basic .)
    DIGIT           reduce using rule 5 (simple -> basic .)
    OTHER           reduce using rule 5 (simple -> basic .)
    [               reduce using rule 5 (simple -> basic .)
    .               reduce using rule 5 (simple -> basic .)
    !               reduce using rule 5 (simple -> basic .)
    $               reduce using rule 5 (simple -> basic .)
    `               reduce using rule 5 (simple -> basic .)
    |               reduce using rule 5 (simple -> basic .)
    $end            reduce using rule 5 (simple -> basic .)
    )               reduce using rule 5 (simple -> basic .)


state 12

    (18) elementary -> literal .

    *               reduce using rule 18 (elementary -> literal .)
    +               reduce using rule 18 (elementary -> literal .)
    ?               reduce using rule 18 (elementary -> literal .)
    {               reduce using rule 18 (elementary -> literal .)
    (               reduce using rule 18 (elementary -> literal .)
    ^               reduce using rule 18 (elementary -> literal .)
    >               reduce using rule 18 (elementary -> literal .)
    <               reduce using rule 18 (elementary -> literal .)
    /               reduce using rule 18 (elementary -> literal .)
    \               reduce using rule 18 (elementary -> literal .)
    #               reduce using rule 18 (elementary -> literal .)
    %               reduce using rule 18 (elementary -> literal .)
    ESCAPED         reduce using rule 18 (elementary -> literal .)
    ALPHA           reduce using rule 18 (elementary -> literal .)
    DIGIT           reduce using rule 18 (elementary -> literal .)
    OTHER           reduce using rule 18 (elementary -> literal .)
    [               reduce using rule 18 (elementary -> literal .)
    .               reduce using rule 18 (elementary -> literal .)
    !               reduce using rule 18 (elementary -> literal .)
    $               reduce using rule 18 (elementary -> literal .)
    `               reduce using rule 18 (elementary -> literal .)
    |               reduce using rule 18 (elementary -> literal .)
    $end            reduce using rule 18 (elementary -> literal .)
    )               reduce using rule 18 (elementary -> literal .)


state 13

    (14) basequantifier -> nrepeat .
